--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-OPENAI_API_KEY = "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"
+OPENAI_API_KEY = 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
+HUGGINGFACEHUB_API_TOKEN = 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
