--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ QDRANT_API_KEY=PW26eMJDrCk-mS0lMTeWYb8TXY_lEHkkPKwRJL6XhiZAIp9yvBv5eQ
 OPENAI_API_KEY=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
 QDRANT_COLLECTION_NAME=smu-data-1
 QDRANT_HOST=https://2ac2db7e-999f-4ac5-8107-05a0ca859ce4.us-east4-0.gcp.cloud.qdrant.io:6333
+QDRANT_COLLECTION2_NAME=smu-data-2
